# ray-serve-demo

./: README.md  pyproject.toml  translator_model.py
