[tool.poetry]
name = "ray-serve-demo"
version = "0.1.0"
description = "Taking Ray Serve for a spin."
authors = ["Alexander Junge <alexander.junge@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "ray_serve_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
requests = "^2.31.0"
transformers = "^4.30.2"
ray = {extras = ["serve"], version = "^2.5.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
